--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div class="full-width">
              <h2>From Humble Beginings</h2>
              <div class="half-width">
-                 <p>Desert Blooms is a local, family owned nursery inspired by the natural beauty of the desert and a simple love for gardening. Founders and sisters, Renee and Marissa, used gardening as a way to spend time together and take a step away from their busy lives. But they soon found that what started out as just a hobby, would blossom into a full time business. When orders from family and friends overtook both their yards, the sister duo moved their garden into the shop they have today. Renee and Marissa pour their hearts into everything that is grown at Desert Blooms and are excited to share that love with you. <br><br> <span><strong>"Life is like a cactus...sometimes thorny, but always beautiful."</strong></span></p>
+                 <p>Desert Blooms is a local, family owned nursery inspired by the natural beauty of the desert and a simple love for gardening. Founders and sisters, Tiffany and Melanie, used gardening as a way to spend time together and take a step away from their busy lives. But they soon found that what started out as just a hobby, would blossom into a full time business. When orders from family and friends overtook both their yards, the sister duo moved their garden into the shop they have today. Tiffany and Melanie pour their hearts into everything that is grown at Desert Blooms and are excited to share that love with you. <br><br> <span><strong>"Life is like a cactus...sometimes thorny, but always beautiful."</strong></span></p>
              </div>
              <div class="half-width">
                  <img id="about-img" src="img-db/sisters.jpg" alt="sisters" />
